--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
 <body>
 	<header>
-		<h1>CSE 134B Homework 1 Website</h1>
-		
+		<h1>Henry's Website</h1>
+		<h2>Potato</h2>
 		<section id="user-info-component">
 			<div id="user-info" style="display: none;">
 				<output id="name-info">&nbsp;</output>
@@ -89,7 +89,7 @@
 
 	<footer>
 		<hr/>
-		<p>💯This page was made with &hearts; by YOUR NAME HERE 💯</p>
+		<p>💯This page was made with &hearts; by Henry 💯</p>
 	</footer>
 	<script type="module">
 		import { update } from './scripts/main.js';
